--- a/css/about.css
+++ b/css/about.css
@@ -22,7 +22,6 @@ div#bg div.wrapper{
 	background: -o-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 }
 div#bg div.wrapper div.body_color{
 	-webkit-border-image: -webkit-gradient(linear, left top, left bottom, from(#bebebe), to(#fff), color-stop(0.5, #fff), color-stop(0, #66cc00)) 21 30 30 21 repeat repeat;
@@ -34,20 +33,17 @@ div#bg div.wrapper div.body_color{
 	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-8 */
-
 }
-div#bg div.wrapper div.body_color div aside{
-	position: absolute;
-	top:10px;
-	left:10px;
+aside{
+	float: left;
+	margin: 10px;
 }
-div#bg div.wrapper div.body_color>div{
+div.body_main{
 	padding-left:260px;
 	padding-right: 40px;
 }
 
-div#bg div.wrapper>div h1{
+div.body_main h1{
 	color: #333;
 	line-height: 1.5em;
 	font-size: 1.7em;
@@ -55,13 +51,13 @@ div#bg div.wrapper>div h1{
 	font-weight: bold;
 	padding-top:20px;
 }
-div#bg div.wrapper div.body_color div h2{
+div.body_main h2{
 	color: #888;
 	line-height: 1.5em;
 	font-size: 1.3em;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-div#bg div.wrapper div.body_color div h3{
+div.body_main h3{
 	color: #d05606;
 	line-height: 1.5em;
 	font-size: 1em;
@@ -69,84 +65,39 @@ div#bg div.wrapper div.body_color div h3{
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	padding-top: 20px;
 }
-div#bg div.wrapper div.body_color div p{
+div.body_main p{
 	color:#666;
 	line-height: 1.2em;
 	padding-top:10px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	
 }
-
-div#bg div.wrapper div.body_color aside nav{
-	background-color: #f2f2f2;
-	border: 1px solid #e0e0df;
-	padding: 10px;
-	padding-bottom: 20px;
-	margin-bottom: 20px;
-
-}
-div#bg div.wrapper div.body_color aside nav strong{
-	text-align: center;
-	display: block;
-	font-size: 2em;
-	color:#666;
-	padding-bottom: 10px;
-	font-family: 'Open Sans Condensed', sans-serif;
-}
-div#bg div.wrapper div.body_color aside nav p{
-	text-align: center;
-	font-size: 1.5em;
-	text-shadow: rgba(222, 222, 222, 03) 1px 0;
-	font-weight: bold;
-	color:#d05606;
-	letter-spacing: .1em;
-	font-family: 'Open Sans Condensed', sans-serif;
-	padding-bottom:30px;
-}
-div#bg div.wrapper div.body_color aside nav ul li{
-	color: #666;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	padding-bottom:30px;
-}
-div#bg div.wrapper div.body_color aside nav ul li a{
-	color:#666;
-}
-/*question
-div#bg div.wrapper div.body_color aside nav ul li a:hover{
-	background: url("../img/arrow.png");
-
-}*/
-div#bg div.wrapper div.body_color aside ul:nth-child(2){
-	list-style-image: url('../img/blue_check.png');
+aside ul.service{
 	padding: 10px 10px 10px 30px;
 }
-div#bg div.wrapper div.body_color aside ul:nth-child(2) li{
-	color: #333;
-	font-size: .8em;
-	line-height: 2em;
-	margin-left: 10px;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
+aside ul.service li{
+	float: none;
 }
-div#bg div.wrapper div.body_color section{
+section.testimonial{
 	background-color: #f2f2f2;
 	border: 1px solid #e0e0df;
 	padding: 10px;
-	margin: 200px 10px 0px 10px;
+	margin: 20px 10px 0px 10px;
 }
-div#bg div.wrapper div.body_color section div{
+section.testimonial div{
 	border: 1px solid #ececec;
 	background-color: #f8f7f7;
 	padding: 20px;
 
 }
-div#bg div.wrapper div.body_color section div h1{
+section.testimonial div h1{
 	color: #d05606; 
 	padding-bottom: 20px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: .8em;
 	font-weight: bold;
 }
-div#bg div.wrapper div.body_color section div q{
+section.testimonial div q{
 	font-size: 1.5em;
 	line-height: 1.5em;
 	color: #666;
@@ -154,7 +105,7 @@ div#bg div.wrapper div.body_color section div q{
 	font-family: Georgia, Times, "Times New Roman", serif;
 	font-style: italic;
 }
-div#bg div.wrapper div.body_color section div button{
+section.testimonial div button{
 	margin-top:20px;
 	padding:10px 20px 10px 20px;
 	background-color: #f2f2f2;
@@ -163,7 +114,7 @@ div#bg div.wrapper div.body_color section div button{
 	color:#666;
 	text-transform: uppercase;
 }
-div#bg div.wrapper div.body_color section div button:hover{
+section.testimonial div button:hover{
 	border:1px solid #ffad41;
 	text-shadow: 0px 0px 0 rgba(0,0,0,0.3);
  	background-color: #FFC579; 
@@ -173,18 +124,20 @@ div#bg div.wrapper div.body_color section div button:hover{
  	background-image: -ms-linear-gradient(top, #FFC579, #D05706);
  	background-image: -o-linear-gradient(top, #FFC579, #D05706);
  	background-image: linear-gradient(to bottom, #FFC579, #D05706);
- 	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#FFC579, endColorstr=#D05706);	
 	color:#fff;
 }
-div#bg div.wrapper div.body_color section div cite{
+section.testimonial div cite{
 	float:right;
 	margin-top:35px;
 }
-div#bg div.wrapper div.body_color section div cite i{
+section.testimonial div cite i{
 	font-weight: bold;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:.8em;
 }
-div#bg div.wrapper div.body_color section div cite img{
+section.testimonial div cite img{
 	padding-left:10px;
+}
+ul.service li{
+	width:100%;
 }
