--- a/css/contact.css
+++ b/css/contact.css
@@ -1,67 +1,7 @@
-div#bg{
-	/* IE10 Consumer Preview */ 
-	background-image: -ms-linear-gradient(top, #D5D5D4 0%, #FFFFFF 100%);
-	/* Mozilla Firefox */ 
-	background-image: -moz-linear-gradient(top, #D5D5D4 0%, #FFFFFF 100%);
-	/* Opera */ 
-	background-image: -o-linear-gradient(top, #D5D5D4 0%, #FFFFFF 100%);
-	/* Webkit (Safari/Chrome 10) */ 
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D5D5D4), color-stop(1, #FFFFFF));
-	/* Webkit (Chrome 11+) */ 
-	background-image: -webkit-linear-gradient(top, #D5D5D4 0%, #FFFFFF 100%);
-	/* W3C Markup, IE10 Release Preview */ 
-	background-image: linear-gradient(to bottom, #D5D5D4 0%, #FFFFFF 100%);
-	padding-top:40px;
-	padding-bottom:40px;
+div.body_main h2{
+	padding-bottom:20px;
 }
-div#bg div.wrapper{
-	padding:1px;
-	background: -moz-linear-gradient(top,  rgba(232,232,232,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(232,232,232,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
-}
-div#bg div.wrapper div.body_color{
-	-webkit-border-image: -webkit-gradient(linear, left top, left bottom, from(#bebebe), to(#fff), color-stop(0.5, #fff), color-stop(0, #66cc00)) 21 30 30 21 repeat repeat;
-	position: relative;
-	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-8 */
-	padding-bottom:500px;
-
-}
-div#bg div.wrapper div.body_color div aside{
-	position: absolute;
-	top:10px;
-	left:10px;
-}
-div#bg div.wrapper div.body_color>div{
-	padding-left:260px;
-	padding-right: 40px;
-}
-div#bg div.wrapper>div h1{
-	color: #333;
-	line-height: 1.5em;
-	font-size: 1.7em;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	padding-top:20px;
-}
-div#bg div.wrapper div.body_color div h2{
-	color: #888;
-	line-height: 1.5em;
-	font-size: 1.3em;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	padding-bottom: 20px
-}
-div#bg div.wrapper div.body_color>div>p{
+div.body_main p{
 	color:#666;
 	line-height: 1.2em;
 	padding-top:10px;
@@ -73,44 +13,55 @@ div#bg div.wrapper div.body_color>div>p{
 div#bg div.wrapper div.body_color div p em{
 	color: #d05606;
 }
-div#bg div.wrapper div.body_color div form label{
+form{
+	float:left;
+}
+form label{
 	position: relative
 }
-div#bg div.wrapper div.body_color div form input{
+form input, textarea{
 	height:30px;
 	width:200px;
 	padding:5px;
 	margin-bottom:20px;
-	float:left;
 	background-color: #f2f2f2;
 	border: 1px solid #e0e0df;
 }
-div#bg div.wrapper div.body_color div form label#message input{
+form button{
+	border:0;
+	background-color: transparent;
+	font-weight: bold;
+	text-transform: uppercase;
+	color:#1e96a0;
+}
+form label#message textarea{
 	height:200px;
 	width:400px;
 }
-div#bg div.wrapper div.body_color div form span{
+form span{
 	color:#888;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-style: italic;
 	font-size:.8em;
 	position: absolute;
-	left:15px;
-	top:9px;
+	left:10px;
+	top:4px;
 }
 
-div#bg div.wrapper div.body_color div form input:hover{
+form input:hover{
 	border: 1px solid #e9a60d;
 }
-div#bg div.wrapper div.body_color>div>section{
-	padding-top:40px;	
+section#map{
+	float:left;
 }
-div#bg div.wrapper div.body_color div section div p{
-	width:100%;
-	padding-top:10px;
-	color:#666;
+div#maptext{
+	width:210px;
+	float: left;
+	padding-top:60px;
+	padding-left:20px;
 }
-div#bg div.wrapper div.body_color>div>section h3{
+
+section#map h3{
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-weight: bold;
 	padding-bottom:20px;	
@@ -118,69 +69,49 @@ div#bg div.wrapper div.body_color>div>section h3{
 	font-size: .9em;
 
 }
-div#bg div.wrapper div.body_color>div>section img{
-	float:left;
-}
-div#bg div.wrapper div.body_color>div>section>div{
-	width:210px;
-	float: left;
-	padding-left:20px;
-}
 
-
-div#bg div.wrapper div.body_color div aside{
-	padding-bottom:10px;
-}
-div#bg div.wrapper div.body_color div aside div:first-child{
+aside div:first-child{
 	background-color: #f2f2f2;
 	border: 1px solid #e0e0df;
 	padding: 10px;
 	padding-bottom: 20px;
 	margin-bottom: 20px;
-
 }
-div#bg div.wrapper div.body_color div aside div address{
+aside div address{
 	color: #666;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	line-height:1.5em;
+	font-size: .8em;
 }
-div#bg div.wrapper div.body_color div aside div address p{
+aside div address p{
 	font-size: 1.5em;
 	color:#666;
 	padding-top: 0px;
 	padding-bottom: 10px;
 	font-family: 'Open Sans Condensed', sans-serif;
 }
-div#bg div.wrapper div.body_color div aside div address:nth-child(2){
+div address:nth-child(2){
 	padding-top:20px;	
 }
-div#bg div.wrapper div.body_color div aside div address em{
+aside div address em{
 	color:#666;
 	font-weight: bold;
 	font-size: .8em;
 }
-/*question
-div#bg div.wrapper div.body_color aside nav ul li a:hover{
-	background: url("../img/arrow.png");
-
-}*/
-
-div#bg div.wrapper div.body_color div aside div section h1{
+aside div section h1{
 	color: #666;
-	font-size: 1em;
+	font-size: .9em;
 	line-height: 1.5em;
-	margin-left: 10px;
 	font-weight: bold;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-div#bg div.wrapper div.body_color div aside section h1 em{
+div#bg div.wrapper div.body_color aside section h1 em{
 	color: #d05606;
 }
-div#bg div.wrapper div.body_color div aside section p{
+div#bg div.wrapper div.body_color aside section p{
 	color: #666;
 	font-size: .8em;
 	line-height: 1.3em;
-	margin-left: 10px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	width: 180px;
 	padding-top:20px;
